src/test/deca/context/valid/non_provided/return_convFloat.deca
// Description:
//    Conversion en float lors d'un 'return'
//
// Resultats:
//    Ok
// 
// Historique:
//    cree le 21/01/2020

class A {
    float getY() {
        int a = 5;
        return a;
    }
}